HEAD
	+ Set version to 8.0.0
	+ Remove ClamAV dependencies version
	+ Update stubs
7.1.0
	+ Bump version number
7.0.3
	+ Fix rendering of signatures db. Fix ZS-160 
7.0.2
	+ Update clamonacc path.
7.0.1
	+ Fix freshclamEBoxDir method
7.0.0
	+ Set version number to 7.0.0
6.2.1
	+ Fix control file
6.2.0
	+ Set version number to 6.2.0
6.1.2
	+ Improve zentyal.antivirus-clamonacc service management
	+ Add new scripts to freshclam's apparmor profile
	+ Remove ScanOnAccess in favor of OnAccessExcludeUname
	+ Add new systemd service for antivirus-clamonacc
	+ Add new regex for logging purposes
6.1.1
	+ Use AlertBrokenExecutables instead of deprecated DetectBrokenExecutables option 
	  for clamav 0.101.4 (fix #1898)
6.1
	+ Set version to 6.1
6.0
	+ Remove deprecated AllowSupplementaryGroups conf option for clamav 0.100
	+ On-Demand System Scanning configurable in /etc/zentyal/antivirius.conf
	+ Set max file size for OnAccess scan to 250M
	+ Display last database update events from freshclam.log
5.1.1
	+ Do not try to validate path if not changed
	+ Do not enable ScanOnAccess option if no paths are defined
	+ Remove obsolete code
5.1
	+ On-Access Scanning for Commercial editions
	+ Remove deprecated purge-module script
5.0.2
	+ Fix dashboard running state false negative
5.0.1
	+ Do not force execution of freshclam after restart as it takes
	  a very long time to timeout when connection is not successful
5.0
	+ Run freshclam daily instead of hourly
4.2
	+ Update version to 4.2
4.1
	+ Fix start of clamd that could take up to one hour to start working
	+ Modify apparmor local profile for freshclam to add /proc/*/status
4.0.1
	+ Force samba conf rewrite and restart in purge-module if AV is enabled
4.0
	+ Adapt firewall to reduce on remoteservices module
	+ Set version to 4.0
3.5
	+ Set version to 3.5
	+ Disabled Ubuntu freshclam daemon
	+ Added clamd socket actions to freshclam apparmor profile
3.4
	+ Set version to 3.4
	+ Make FreshclamStatus model more resilient to errors